--- a/searchapp/templates/login.html
+++ b/searchapp/templates/login.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    {{form}}
+    <form action="/login/" method="post">
+        {% csrf_token %}
+        {{form}}
+        <button type="submit">login</button>
+    </form>
 </body>
 </html>
