--- a/searchapp/templates/search.html
+++ b/searchapp/templates/search.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Search</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 		<script>
 			$(document).ready(function () {
 				$("#search-button").click(function () {
@@ -64,6 +66,23 @@
 					});
 				});
 
+				function update_ajax() {
+					let csrftoken = $("[name=csrfmiddlewaretoken]").val();
+					$.ajax({
+						url: "/action_update_data/",
+						type: "GET",
+						// data: { q: searchTerm },
+						headers: {
+							"X-CSRFToken": csrftoken
+						},
+						async:true,
+						success: function (data) {
+							console.log(data);
+							// Update the search results tab with the results.
+						},
+					});
+				}
+
 				// const socket = new WebSocket('ws://localhost:9000/chat/test');
 
 				// socket.onopen = function() {
@@ -91,34 +110,68 @@
 				// }
 
 				if(typeof(EventSource) !== "undefined") {
-					// Yes! Server-sent events support!
-					var source = new EventSource("{% url 'stream' %}");
+					function EventFillData() {
+						// Yes! Server-sent events support!
+						var source = new EventSource("{% url 'stream' %}", {withCredentials: true});
 
-					source.onopen = function(event) {
-						console.log("open event");
+						source.onopen = function(event) {
+							console.log("open event");
+						}
+
+						source.onerror = function(event) {
+							console.log("Error");
+							console.log(event);
+							source.close();
+						}
+						source.onmessage = function(event) {
+							// This function will be called whenever there's an update.
+							console.log(event);
+							if (parseInt(event.data)) {
+								$("#id_progress").attr('aria-valuenow', event.data)
+								$("#id_progress").css('width', event.data+"%")
+								$("#id_progress").text(event.data + "%")
+							} else {
+								console.log(event.data);
+								$("#search-results").text(event.data);
+							}
+						};
+
+						window.addEventListener('beforeunload', (event) => {
+							// Close your stream here
+							source.close();
+						});
 					}
-
-					source.onerror = function(event) {
-						console.log("Error");
-						console.log(event);
-						source.close();
-					}
-					source.onmessage = function(event) {
-						// This function will be called whenever there's an update.
-						console.log(event.data);
-						$("#search-results").text(event.data);
-					};
-
-					window.addEventListener('beforeunload', (event) => {
-						// Close your stream here
-						source.close();
-					});
+					EventFillData()
 				} else {
 					// Sorry! No server-sent events support..
 					console.warn("Does not support server-sent events");
 				}
 
 			});
+
+			// function poll() {
+			// 	var data = parseInt($("#id_progress").attr('aria-valuenow')) || 1
+			// 	$.ajax({
+			// 		url: "/long_polling_view/",
+			// 		data: {test: data},
+			// 		timeout: 30000,
+			// 		success: function(data) {
+			// 			console.log(data.message, data.data);
+			// 			$("#id_progress").attr('aria-valuenow', data.data)
+			// 			$("#id_progress").css('width', data.data+"%")
+			// 			$("#id_progress").text(data.data + "%")
+			// 			// After receiving the response, start polling again
+			// 			poll();
+			// 		},
+			// 		error: function() {
+			// 			// In case of an error, wait for 5 seconds before starting the next poll
+			// 			setTimeout(poll, 5000);
+			// 		}
+			// 	});
+			// }
+
+			// // Start polling
+			// poll();
 		</script>
 	</head>
 	<body>
@@ -136,5 +189,8 @@
 		<div id="search-results">{{users}}</div>
 		<div>{{ query }}</div>
 		<div id="check-results"></div>
+		<div class="progress">
+			<div id="id_progress" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%">1%</div>
+		</div>
 	</body>
 </html>
